ltsp (0.88debian1) UNRELEASED; urgency=low

  [ Otavio Salvador ]
  * Merge changes did by Ubuntu but debian/control since it's very Ubuntu
    specific.
    - Fix problem with gettext use. (Closes: #375601)
  
  [ Tiago Bortoletto Vaz ]
  * Add a correct i18n support for this package, using a specific Makefile
    to handle gettext
  * Fix ltsp-build-client script to get gettext message catalogs from locale
    dir

 -- Otavio Salvador <otavio@debian.org>  Tue, 27 Jun 2006 10:02:31 -0300
  
ltsp (0.88) edgy; urgency=low

  * merged debian modularization into upstream branch
  * merged debian translations
  * fixed quoting of all strings 
  * added a line that sources gettext.sh to ltsp-build-client to make it work
    at all.
  * added a touch $ROOT/etc/ltsp_chroot to the 020-rootpath plugin to make
    ltsp-client installable again.
  * quieten down the rc_cleanup function to not spill locale errors
  * changed default distro to edgy
  * first upload to edgy

 -- Oliver Grawert <ogra@ubuntu.com>  Thu, 22 Jun 2006 10:09:02 +0200

ltsp (0.87debian2) unstable; urgency=low

  [ Otavio Salvador ]
  * Make LTSP messages translatable.
  * Minimal fixes for indentation of ltsp-client-setup init script.
  * Fix Permission Denied error due a error in unionfs mount command in
    initramfs hooks. Thanks to Dean Montgomery <dmonty@sd73.bc.ca> by
    debugging it. (Closes: #360249)
  * We don't need to set initramfs-tools as default since it's since
    Debian kernel 2.6.15.
  * Improved common/020-init-image including better code formating and
    documentation.
  * Converted set-arch modules to be a common one. For this dpkg use was
    remove. Support for error messages translation was also added.
 
  [ Gustavo Franco ]
  * po/pt_BR.po:
    - Add po/ltsp.pot Portuguese Brazilian translation by myself.
  
  [ Otavio Salvador ]
  * Move translation update routine to update-po rules target.
  * Fix code style in common/010-set-base.